# 8pi--V1-Platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  agent-fleet.md  architecture.md  auth-advanced-targets-plan.md  design_guidelines.json  docker-compose.yml  execution-plan.md  governance-hardening.md  memory.md  offensive-depth-plan.md  phases.md  project-requirements.md  pyproject.toml  rules.md
backend/: DEPRECATED.md  Dockerfile  agent_runtime.py  attack_path.py  audit.py  auth.py  bedrock.py  cve_data.py  db.py  model_gateway.py  orchestration.py  real_tools.py  red_scope.py  reporting.py  requirements.txt  scope.py  seed.py  sensing.py  server.py  sim_tools.py  store.py  threat_model.py  tool_service.py  vuln_loop.py
backend/tests/: test_8pi_backend.py  test_model_gateway_regression.py  test_red_scope_and_archive.py
deploy/: README.md  api.Dockerfile
deploy/cloudformation/: stack.yaml
deploy/terraform/: main.tf  outputs.tf  terraform.tfvars.example  user-data.sh.tmpl  variables.tf
docs/: 01-architecture.md  02-technologies.md  03-agents-and-tools.md  04-purple-team-flows.md  05-offensive-layer.md  README.md  architecture.md
examples/: engagement-range.scope.yaml
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
memory/: PRD.md  test_credentials.md
range/: README.md  docker-compose.yml
src/attack_engine/: __init__.py  cli.py  config.py  engine.py  errors.py  logging.py  manager.py  netutil.py  versioning.py
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json
test_reports/pytest/: pytest_iter6.xml  pytest_iter7.xml  pytest_results.xml
tests/: conftest.py  test_cli.py  test_engine.py  test_manager.py  test_netutil.py  test_scope_testing_auth.py  test_sprint0_exit_gate.py  test_sprint1_exit_gate.py  test_sprint2_exit_gate.py  test_sprint3_exit_gate.py  test_versioning.py
tests/ad/: test_abuse_graph.py  test_ad.py
tests/agents/: conftest.py  test_converter.py  test_discovery.py  test_identity_specialist.py  test_injection.py  test_loader.py  test_payload_synth.py  test_reasoning.py  test_recon_specialist.py  test_surface_mapper.py  test_web_and_exploit.py  test_web_chain.py  test_web_depth_e2e.py  test_web_specialist.py
tests/api/: test_adapter.py  test_approvals.py  test_report_html.py  test_views.py
tests/attack/: test_attack.py
tests/c2/: test_c2.py  test_foothold.py  test_lateral.py  test_msf_sliver.py  test_webshell.py
tests/correlate/: test_cve_feed_ingest.py  test_matcher.py  test_nvd_ingest.py
tests/credentials/: test_cracker.py  test_manager.py  test_vault.py
tests/defense/: test_blue_sentry.py  test_detection.py
tests/evals/: test_metrics.py  test_runner.py
tests/eventbus/: test_eventbus.py
tests/exploit/: conftest.py  test_metasploit_module.py  test_modules.py  (+1 more)
(+297 files in other folders)
